Fixed spacing a bit

--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -225,7 +225,7 @@
   .night-outro {
     width: auto;
     text-align: center;
-    padding: 2rem 1rem 2rem 1rem;
+    padding: 2rem 1rem 4rem 1rem;
   }
 
   .night-outro h4 {
@@ -237,7 +237,7 @@
   .day-outro {
     width: auto;
     text-align: center;
-    padding: 2rem 1rem 2rem 1rem;
+    padding: 2rem 1rem 4rem 1rem;
   }
 
   .day-outro h4 {
